# datalake-mocked

./: .gitattributes  .gitignore  .pylintrc  .pymarkdown.json  AGENTS.md  CLAUDE.md  Makefile  README.campos.md  README.liquibase.md  README.md  docker-compose.yml  liquibase.sh  pyproject.toml  requirements-dev.in  requirements.in
.githooks/: post-commit
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
1_raw_2_standard/: cria_tabela_produtos_genericos.py  cria_tabela_produtos_iqvia.py
2_standard_2_refined/: README.md  add_info_intercambiaveis.py  adiciona_correcoes_manuais.py  adiciona_correcoes_manuais_pre_enriquecimento.py  agrega_enriquecimentos.py  agrega_info_iqvia.py  apaga_enriquecimento.py  atualiza_collection_conversas_chat.py  avalia_intercambiaveis.py  complementa_nome_descricao_produtos.py  cria_ids_lojas_com_produtos.py  define_eh_controlado.py  enriquece_tamanho_produtos.py  fuzzy_matching_produtos_em_processamento.py  gera_embeddings_produtos.py  gera_sparse_vector_hybrid_search.py  junta_informacoes_anvisa.py  mescla_eans_similares.py  padroniza_principio_ativo.py  padroniza_produtos_foco_industria.py  padroniza_receita_e_tarja.py  process_intercambiaveis_anvisa.py  salva_embeddings_s3_milvus.py  salva_tabela_refined.py
3_analytics/: README_market_basket.md  analisa_embeddings.py  avisa_vendas_ads_discord.py  calcula_score_aderencia.py  categoriza-perguntas-chat.py  cria_calendario.py  cria_persona_produtos_foco.py  gera_fine_tuning_dataset_chat.py  market_basket_analysis.py  market_basket_analysis_categories.py
apuracao/: apuracao_desconto_consumidor.py  calcular_bonus_gerentes.py  exportar_premio_atendentes.py
(+463 files in other folders)
